Changed source from java 11 to java 8 Updated the properties in plugin.xml Updated gradle versions